Feat: Se ha modificado la logica del Controller ligeramente para comprobaciones sobre el contenido que recibe