@@ -3,6 +3,8 @@ package com.example.colectivoIkuna.infrastructure.adapter.input.rest;
 import com.example.colectivoIkuna.application.dto.CulturalProjectDTO;
 import com.example.colectivoIkuna.application.mapper.CulturalProjectMapper;
 import com.example.colectivoIkuna.application.usecases.IkunaManagerUseCase;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import lombok.RequiredArgsConstructor;
 import java.util.List;
@@ -13,28 +15,27 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class IkunaDashboardController {
 
-  private final IkunaManagerUseCase ikunaManager;
-  private final CulturalProjectMapper projectMapper; // Spring inyectará la implementación generada
+  private final IkunaManagerUseCase ikunaUseCase;
+  private final CulturalProjectMapper projectMapper;
 
   @GetMapping("/portfolio")
-  public List<CulturalProjectDTO> getPortfolio() {
-    return ikunaManager.getPortfolio().stream()
-        .map(projectMapper::toDTO)
-        .collect(Collectors.toList());
+  public ResponseEntity<List<CulturalProjectDTO>> getPortfolio() {
+    var dtos = ikunaUseCase.getPortfolio().stream()
+            .map(projectMapper::toDTO)
+            .toList();
+    return ResponseEntity.ok(dtos);
   }
 
-  @PostMapping("/projects")
-  public CulturalProjectDTO createProject(@RequestBody CulturalProjectDTO dto) {
-    var entity = projectMapper.toEntity(dto);
-    var saved = ikunaManager.launchOrUpdateProject(entity);
-    return projectMapper.toDTO(saved);
+  @PostMapping
+  public ResponseEntity<CulturalProjectDTO> createProject(@RequestBody CulturalProjectDTO dto) {
+    var savedProject = ikunaUseCase.launchOrUpdateProject(projectMapper.toEntity(dto));
+    return new ResponseEntity<>(projectMapper.toDTO(savedProject), HttpStatus.CREATED);
   }
 
-  @PutMapping("/projects/{id}")
-  public CulturalProjectDTO updateProject(@PathVariable Long id, @RequestBody CulturalProjectDTO dto) {
+  @PutMapping("/{id}")
+  public ResponseEntity<CulturalProjectDTO> updateProject(@PathVariable Long id, @RequestBody CulturalProjectDTO dto) {
     dto.setId(id);
-    var entity = projectMapper.toEntity(dto);
-    var saved = ikunaManager.launchOrUpdateProject(entity);
-    return projectMapper.toDTO(saved);
+    var updated = ikunaUseCase.launchOrUpdateProject(projectMapper.toEntity(dto));
+    return ResponseEntity.ok(projectMapper.toDTO(updated));
   }
 }
